--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=eureka-consumer
 server.port=1003
 
-eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http://es.shruochu.com:10001/eureka/
