--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,12 @@ spring:
     name: eureka-consumer
 
 server:
-  port: 1004
+  port: 1003
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://es.shruochu.com:10001/eureka/
+      defaultZone: http://localhost:10001/eureka/
 
 feign:
   hystrix:
